# swapi-rust

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  query.rs  types.rs
src/types/: films.rs  mod.rs  people.rs  planets.rs  species.rs  starships.rs  vehicles.rs
