[package]
name = "swapi"
version = "0.2.0"
authors = ["Kyle Surowiec <kylesurowic@me.com>", "Declan Johnson <declan.l.johnson@gmail.com>"]
edition = "2018"
description = "A Rust wrapper for the Star Wars API - https://swapi.co/"
license = "MIT"

[dependencies]
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0.80"
serde_json = "1.0.33"